解决编译问题